Updated homepage with stylesheet

--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html>
 	<head>
 		<title>canary projects</title>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="icon" href="https://avatars.githubusercontent.com/u/119134081?s=400&u=ad2afd331af8a1e82c72115c1ce942117e9bbd17&v=4">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+        <style>
+        body {
+            background-color: rgb(25, 26, 27);
+            padding-top: 35px;
+            padding-bottom:35px;
+        }
+        
+        .title {
+            color: white;
+            font-family: "Inter", sans-serif;
+            text-align: center;
+        }
+        
+        .construction {
+            color: white;
+            font-family: "Inter", sans-serif;
+            text-align: center;
+        }
+        </style>
 	</head>
 	<body>
-		<h1>This site is currently under construction, come back later!</h1>
-		<p>This is where documentation, and downloads are hosted.</p>
+		<h1 class="title">github/canary-projects</h1>
+		<p class="construction">Welcome to the main website, it's currently under construction</p>
 	</body>
 </html>
