--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>canary projects</title>
+		<title>Canary</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="icon" href="https://avatars.githubusercontent.com/u/119134081?s=400&u=ad2afd331af8a1e82c72115c1ce942117e9bbd17&v=4">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
@@ -31,12 +31,12 @@
         
         .link {
         	color: white;
+		text-decoration: none;
         }
         </style>
 	</head>
 	<body>
-		<h1 class="title">github/canary-projects</h1>
-		<p class="description">Canary is a development group on roblox that helps making the development process easier. <a class="link" href="https://github.com/canary-projects">View our repositories here.</a></p>
-		<p class="description">Documentation is coming soon.</p>
+		<p class="title">github/lolmansReturn</p>
+		<p class="description">lolmansReturn is a long time web developer and programmer with about 4 years of experience. <a class="link" href="https://github.com/lolmansReturn"><b>View our repositories here.</b></a></p>
 	</body>
 </html>
