--- a/index.html
+++ b/index.html
@@ -5,42 +5,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="icon" href="https://avatars.githubusercontent.com/u/119134081?s=400&u=ad2afd331af8a1e82c72115c1ce942117e9bbd17&v=4">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
-        <style>
-            body {
-            background-color: rgb(25, 26, 27);
-            padding-top: 35px;
-            padding-bottom:35px;
-            padding-right: 35px;
-            padding-left: 35px;
-            }
-            .title {
-            color: white;
-            font-family: "Inter", sans-serif;
-            text-align: center;
-            user-select: none;
-            }
-            .description {
-            color: white;
-            font-family: "Inter", sans-serif;
-            text-align: center;
-            user-select: none;
-            }
-            .link {
-            color: white;
-            text-decoration: none;
-            }
-            li {
-            padding: 5px 0;
-            text-align: center;
-            color: white;
-            font-family: "Inter", sans-serif;
-            }
-            ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 10px 0;
-            }
-        </style>
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <h2 class="title">lolmansReturn</h2>
