--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="icon" href="https://avatars.githubusercontent.com/u/119134081?s=400&u=ad2afd331af8a1e82c72115c1ce942117e9bbd17&v=4">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="https://lolmansreturn.github.io/css/canary-style.css">
     </head>
-    <body>
+    <body class="dark">
         <h2 class="title">lolmansReturn</h2>
         <br>
         <p class="description">lolmansReturn is a long time web developer and programmer with about 4 years of experience. <a class="link" href="https://github.com/lolmansReturn"><b>View our repositories here.</b></a></p>
         <br>
         <h2 class="title">Resource Documentation:</h2>
         <ul>
-            <li><a class="link" href="docs/data-service.html">DataService v2</a></li>
-            <li><a class="link" href="">Arch Framework</a></li>
+            <li><a href="docs/data-service.html">DataService v2</a></li>
+            <li><a href="">Arch Framework</a></li>
         </ul>
     </body>
 </html>
