--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title>Canary</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="icon" href="https://avatars.githubusercontent.com/u/119134081?s=400&u=ad2afd331af8a1e82c72115c1ce942117e9bbd17&v=4">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://lolmansreturn.github.io/css/canary-style.css">
     </head>
     <body class="dark">
