--- a/tester/index.html
+++ b/tester/index.html
@@ -5,16 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
     <title>HTML Tester</title>
     <link rel="stylesheet" href="https://lolmansreturn.github.io/css/canary-style.css">
     <script src="https://lolmansreturn.github.io/js/tester.js"> </script>
 </head>
 
-<body>
+<body class="dark text-padded">
     <p class="title bold no-select">HTML Tester</p>
     <p class="description no-select">Easily test your HTML in a new window</p>
     <br>
