--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@
         <title>Canary</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="icon" href="https://avatars.githubusercontent.com/u/119134081?s=400&u=ad2afd331af8a1e82c72115c1ce942117e9bbd17&v=4">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://lolmansreturn.github.io/css/canary-style.css">
     </head>
-    <body class="dark">
-        <h2 class="title">lolmansReturn</h2>
+    <body class="dark text-padded">
+        <p class="title bold">lolmansReturn</p>
         <br>
-        <p class="description">lolmansReturn is a long time web developer and programmer with about 4 years of experience. <a class="link" href="https://github.com/lolmansReturn"><b>View our repositories here.</b></a></p>
+        <p class="description">lolmansReturn is a long time web developer and programmer with about 4 years of experience. <a class="link no-decor bold" href="https://github.com/lolmansReturn">View our repositories here.</a></p>
         <br>
-        <h2 class="title">Resource Documentation:</h2>
-        <ul>
+        <p class="title bold">Resource Documentation:</p>
+        <ul style="list-style: none; margin: 0; padding: 0;">
             <li><a href="docs/data-service.html">DataService v2</a></li>
-            <li><a href="">Arch Framework</a></li>
+            <li><a href="docs/canary-engine.html">CanaryEngine</a></li>
+            <li><a href="docs/console.html">Console</a></li>
         </ul>
     </body>
 </html>
