--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     </head>
     <body class="dark text-padded">
         <p class="title bold">lolmansReturn</p>
-        <br>
         <p class="description">lolmansReturn is a long time web developer and programmer with about 4 years of experience. <a class="link no-decor bold" href="https://github.com/lolmansReturn">View our repositories here.</a></p>
         <br>
-        <p class="title bold">Resource Documentation:</p>
+        <p class="heading bold">Resource Documentation</p>
         <ul style="list-style: none; margin: 0; padding: 0;">
             <li><a href="docs/data-service.html">DataService v2</a></li>
             <li><a href="docs/canary-engine.html">CanaryEngine</a></li>
