--- a/index.html
+++ b/index.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Canary</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="icon" href="https://avatars.githubusercontent.com/u/119134081?s=400&u=ad2afd331af8a1e82c72115c1ce942117e9bbd17&v=4">
-        <link rel="stylesheet" href="https://lolmansreturn.github.io/css/canary-style.css">
-    </head>
-    <body class="dark text-padded">
-        <p class="title bold">lolmansReturn</p>
-        <p class="description">lolmansReturn is a long time web developer and programmer with about 4 years of experience. <a class="link no-decor bold" href="https://github.com/lolmansReturn">View our repositories here.</a></p>
-        <br>
-        <p class="heading bold">Resource Documentation</p>
-        <ul style="list-style: none; margin: 0; padding: 0;">
-            <li><a href="docs/data-service.html">DataService v2</a></li>
-            <li><a href="docs/canary-engine.html">CanaryEngine</a></li>
-            <li><a href="docs/console.html">Console</a></li>
+
+<head>
+    <title>2jammers</title>
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="icon"
+        href="https://avatars.githubusercontent.com/u/119134081?s=400&u=ad2afd331af8a1e82c72115c1ce942117e9bbd17&v=4">
+    <link rel="stylesheet" href="/css/index.css">
+</head>
+
+<body>
+    <div>
+        <h1>2jammers</h1>
+        <a title="GitHub" href="https://github.com/2jammers"><i data-lucide="github" class="icon"></i></a>
+        <a title="Discord" href="https://discordapp.com/users/1104457977328574618"><i data-lucide="messages-square" class="icon"></i></a>
+        <a title="YouTube" href="https://www.youtube.com/channel/UC5YOi2eHWGekJBMiVfKeCcg"><i data-lucide="youtube" class="icon"></i></a>
+        <p>Hi! My name is James, a game developer and a web developer. I primarily do programming, but I can also model,
+            compose, and design user interfaces. I am most fluent in Lua/Luau and HTML, but I also know a small bit of
+            CSS and JavaScript. In the future, I hope to learn a higher level language such as Rust or C++. Outside of
+            programming, I like biking, gun shooting, basketball, and listening to music (alternative rock is great!)</p>
+        <hr>
+        <h2>Positions</h2>
+        <ul>
+            <li>Founder - <a href="https://github.com/lumin-dev">Lumin Labs</a></li>
+            <li>Contributor - <a href="https://spawnpoint.dev">Spawnpoint Interactive</a></li>
         </ul>
-    </body>
+        <hr>
+        <h2>Projects</h2>
+        <ul>
+            <li>Lumin Framework - <a href="https://github.com/lumin-dev">Lumin Labs</a></li>
+            <li>Snacky - <a href="https://github.com/lumin-dev">Lumin Labs</a></li>
+            <li>normal board game - <a href="https://github.com/lumin-dev">Lumin Labs</a></li>
+        </ul>
+        <hr>
+        <h2>Contributions</h2>
+        <ul>
+            <li>Framework for Fractured Franchise - <a href="https://spawnpoint.dev">Spawnpoint Interactive</a></li>
+            <li>Helper for Gorytown 2 - <a href="https://www.roblox.com/groups/16928578/Bloody-Paws">Bloody Paws!</a></li>
+        </ul>
+    </div>
+    <script>
+        lucide.createIcons();
+    </script>
+</body>
+
 </html>
