add meta data + discord links

--- a/index.html
+++ b/index.html
@@ -2,42 +2,50 @@
 <html>
 
 <head>
-    <title>2jammers</title>
+    <title>2jammers - Portfolio</title>
     <script src="https://unpkg.com/lucide@latest"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="icon"
         href="https://avatars.githubusercontent.com/u/119134081?s=400&u=ad2afd331af8a1e82c72115c1ce942117e9bbd17&v=4">
     <link rel="stylesheet" href="/css/index.css">
+    <meta name="keywords" content="2jammers, lumin, lumin labs, james, roblox, programmer">
+    <meta name="author" content="2jammers">
+    <meta name="google-site-verification" content="ELT55GhkElq2sHghgL9YiTDzTHlcoYEFm0SRxKlMab0" />
 </head>
 
 <body>
     <div>
         <h1>2jammers</h1>
         <a title="GitHub" href="https://github.com/2jammers"><i data-lucide="github" class="icon"></i></a>
-        <a title="Discord" href="https://discordapp.com/users/1104457977328574618"><i data-lucide="messages-square" class="icon"></i></a>
-        <a title="YouTube" href="https://www.youtube.com/channel/UC5YOi2eHWGekJBMiVfKeCcg"><i data-lucide="youtube" class="icon"></i></a>
+        <a title="Discord" href="https://discordapp.com/users/1104457977328574618"><i data-lucide="messages-square"
+                class="icon"></i></a>
+        <a title="YouTube" href="https://www.youtube.com/channel/UC5YOi2eHWGekJBMiVfKeCcg"><i data-lucide="youtube"
+                class="icon"></i></a>
         <p>Hi! My name is James, a game developer and a web developer. I primarily do programming, but I can also model,
             compose, and design user interfaces. I am most fluent in Lua/Luau and HTML, but I also know a small bit of
             CSS and JavaScript. In the future, I hope to learn a higher level language such as Rust or C++. Outside of
-            programming, I like biking, gun shooting, basketball, and listening to music (alternative rock is great!)</p>
+            programming, I like biking, gun shooting, basketball, and listening to music (alternative rock is great!)
+        </p>
         <hr>
         <h2>Positions</h2>
         <ul>
-            <li>Founder - <a href="https://github.com/lumin-dev">Lumin Labs</a></li>
-            <li>Contributor - <a href="https://spawnpoint.dev">Spawnpoint Interactive</a></li>
+            <li>Founder - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Affiliate - <a href="https://discord.gg/fractured">Spawnpoint Interactive</a></li>
         </ul>
         <hr>
         <h2>Projects</h2>
         <ul>
-            <li>Lumin Framework - <a href="https://github.com/lumin-dev">Lumin Labs</a></li>
-            <li>Snacky - <a href="https://github.com/lumin-dev">Lumin Labs</a></li>
-            <li>normal board game - <a href="https://github.com/lumin-dev">Lumin Labs</a></li>
+            <li>Lumin Framework - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Snacky - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>normal board game - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
         </ul>
         <hr>
         <h2>Contributions</h2>
         <ul>
-            <li>Framework for Fractured Franchise - <a href="https://spawnpoint.dev">Spawnpoint Interactive</a></li>
-            <li>Helper for Gorytown 2 - <a href="https://www.roblox.com/groups/16928578/Bloody-Paws">Bloody Paws!</a></li>
+            <li>Framework for Fractured Franchise - <a href="https://discord.gg/fractured">Spawnpoint Interactive</a>
+            </li>
+            <li>Helper for Gorytown 2 - <a href="https://discord.gg/qsVhYJHfHA">Bloody Paws!</a></li>
         </ul>
     </div>
     <script>
