--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <hr>
         <h2>Contributions</h2>
         <ul>
-            <li>Framework for Fractured Franchise - <a href="https://discord.gg/fractured">Spawnpoint Interactive</a>
+            <li>Helping fix bugs for Fractured Franchise - <a href="https://discord.gg/fractured">Spawnpoint Interactive</a>
             </li>
             <li>Helper for Gorytown 2 - <a href="https://discord.gg/qsVhYJHfHA">Bloody Paws!</a></li>
         </ul>
