publish new version

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 class="icon"></i></a>
         <p>Hi! My name is James, a game developer and a web developer. I primarily do programming, but I can also model,
             compose, and design user interfaces. I am most fluent in Lua/Luau and HTML, but I also know a small bit of
-            CSS and JavaScript. In the future, I hope to learn a lower level language such as Rust or C++. Outside of
-            programming, I like biking, gun shooting, basketball, and listening to music (alternative rock is great!)
+            CSS and JavaScript. In the future, I hope to learn another language such as Rust or C++. Outside of
+            programming, I like biking, calisthenics training, gun shooting, basketball, and listening to music (alternative rock is great!)
         </p>
         <hr>
         <h2>Positions</h2>
