--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>2jammers - Portfolio</title>
+    <title>James</title>
     <script src="https://unpkg.com/lucide@latest"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -16,16 +16,16 @@
 
 <body>
     <div>
-        <h1>2jammers</h1>
+        <h1>James</h1>
         <a title="GitHub" href="https://github.com/2jammers"><i data-lucide="github" class="icon"></i></a>
         <a title="Discord" href="https://discordapp.com/users/1104457977328574618"><i data-lucide="messages-square"
                 class="icon"></i></a>
         <a title="YouTube" href="https://www.youtube.com/channel/UC5YOi2eHWGekJBMiVfKeCcg"><i data-lucide="youtube"
                 class="icon"></i></a>
-        <p>Hi! My name is James, a game developer and a web developer. I primarily do programming, but I can also model,
-            compose, and design user interfaces. I am most fluent in Lua/Luau and HTML, but I also know a small bit of
-            CSS and JavaScript. In the future, I hope to learn another language such as Rust or C++. Outside of
-            programming, I like biking, calisthenics training, gun shooting, basketball, and listening to music (alternative rock is great!)
+        <p>
+            hey, i'm james
+            <br><br>
+            I am a web and game developer. I primarily program and work on OSS projects, and design user interfaces. I currently know Luau\Lua, HTML, CSS, and JavaScript, although in the future I aspire to learn a lower level langauge such as Rust to build applications. I am familiar with GitHub, Docker and VSCode and that is what I use mostly in my projects. As for personal interests, I like gun shooting, calisthenics, and basketball.
         </p>
         <hr>
         <h2>Positions</h2>
@@ -38,14 +38,16 @@
         <ul>
             <li>Lumin Framework - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
             <li>Snacky - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
-            <li>normal board game - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Lumin Plugin Suite - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Aegis - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Aegis Components - Studio Pack - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
         </ul>
         <hr>
         <h2>Contributions</h2>
         <ul>
-            <li>Helping fix bugs for Fractured Franchise - <a href="https://discord.gg/fractured">Spawnpoint Interactive</a>
+            <li>Fixxing bugs for Fractured Franchise - <a href="https://discord.gg/fractured">Spawnpoint Interactive</a>
             </li>
-            <li>Helper for Gorytown 2 - <a href="https://discord.gg/qsVhYJHfHA">Bloody Paws!</a></li>
+            <li>Fixxing bugs for Gorytown 2 - <a href="https://discord.gg/qsVhYJHfHA">Bloody Paws!</a></li>
         </ul>
     </div>
     <script>
