--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>
             hey, i'm james
             <br><br>
-            I am a web and game developer. I primarily program and work on OSS projects, and design user interfaces. I currently know Luau\Lua, HTML, CSS, and JavaScript, although in the future I aspire to learn a lower level langauge such as Rust to build applications. I am familiar with GitHub, Docker and VSCode and that is what I use mostly in my projects. As for personal interests, I like gun shooting, calisthenics, and basketball.
+            I am a web and game developer. I primarily program and work on OSS projects, and design user interfaces. I currently know Luau\Lua, HTML, CSS, and JavaScript, although in the future I aspire to learn a lower level langauge such as Rust to build applications. I am also learning chinese and can translate <i>some</i> spanish fluently. I am familiar with GitHub, Docker and VSCode and that is what I use mostly in my projects. As for personal interests, I like gun shooting, calisthenics, and basketball.
         </p>
         <hr>
         <h2>Positions</h2>
