--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>James</title>
-    <script src="https://unpkg.com/lucide@latest"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="icon"
@@ -17,42 +16,35 @@
 <body>
     <div>
         <h1>James</h1>
-        <a title="GitHub" href="https://github.com/2jammers"><i data-lucide="github" class="icon"></i></a>
-        <a title="Discord" href="https://discordapp.com/users/1104457977328574618"><i data-lucide="messages-square"
-                class="icon"></i></a>
-        <a title="YouTube" href="https://www.youtube.com/channel/UC5YOi2eHWGekJBMiVfKeCcg"><i data-lucide="youtube"
-                class="icon"></i></a>
-        <p>
-            hey, i'm james
-            <br><br>
-            I am a web and game developer. I primarily program and work on OSS projects, and design user interfaces. I currently know Luau\Lua, HTML, CSS, and JavaScript, although in the future I aspire to learn a lower level langauge such as Rust to build applications. I am also learning chinese and can translate <i>some</i> spanish fluently. I am familiar with GitHub, Docker and VSCode and that is what I use mostly in my projects. As for personal interests, I like gun shooting, calisthenics, and basketball.
-        </p>
+        <a href="https://github.com/2jammers"><img class="icon" height="48px" width="48px" src="/assets/github.png"></a>
+        <a href="https://discordapp.com/users/1104457977328574618"><img class="icon" height="48px" width="48px" src="/assets/discord.png"></a>
+        <a href="https://www.roblox.com/users/2565977660/profile"><img class="icon" height="48px" width="48px" src="/assets/roblox.png"></a>
+        <h2>About Me</h2>
+        <ul>
+            <li>Full stack developer 🥞</li>
+            <li>Open source freedom fighter 🥊</li>
+            <li>Calisthenics athlete 💪</li>
+            <li>Great at programming 💻</li>
+            <li>Loves the outdoors 🍁</li>
+            <li>Favorite music is alternative rock 🥁</li>
+            <li>Cats are pretty cool pets 🐈</li>
+            <li>Has knowledge of Luau and web langs 📜</li>
+        </ul>
         <hr>
         <h2>Positions</h2>
         <ul>
-            <li>Founder - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
-            <li>Affiliate - <a href="https://discord.gg/fractured">Spawnpoint Interactive</a></li>
+            <li>Head of Programming - <a href="https://luminlabsdev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Head of Modeling - <a href="https://luminlabsdev.github.io/link/discord">Lumin Labs</a></li>
         </ul>
         <hr>
         <h2>Projects</h2>
         <ul>
-            <li>Lumin Framework - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
-            <li>Snacky - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
-            <li>Lumin Plugin Suite - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
-            <li>Aegis - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
-            <li>Aegis Components - Studio Pack - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
-        </ul>
-        <hr>
-        <h2>Contributions</h2>
-        <ul>
-            <li>Fixxing bugs for Fractured Franchise - <a href="https://discord.gg/fractured">Spawnpoint Interactive</a>
-            </li>
-            <li>Fixxing bugs for Gorytown 2 - <a href="https://discord.gg/qsVhYJHfHA">Bloody Paws!</a></li>
+            <li>Framework - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Network - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Debugger - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Storybook - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
         </ul>
     </div>
-    <script>
-        lucide.createIcons();
-    </script>
 </body>
 
 </html>
