--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
 <head>
     <title>James</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="icon"
-        href="https://avatars.githubusercontent.com/u/119134081?s=400&u=ad2afd331af8a1e82c72115c1ce942117e9bbd17&v=4">
-    <link rel="stylesheet" href="/css/index.css">
-    <meta name="keywords" content="2jammers, lumin, lumin labs, james, roblox, programmer">
-    <meta name="author" content="2jammers">
+        href="https://avatars.githubusercontent.com/u/119134081?s=400&u=ad2afd331af8a1e82c72115c1ce942117e9bbd17">
+    <link rel="stylesheet" href="./output.css">
     <meta name="google-site-verification" content="ELT55GhkElq2sHghgL9YiTDzTHlcoYEFm0SRxKlMab0" />
 </head>
 
-<body>
-    <div>
-        <h1>James</h1>
-        <a href="https://github.com/2jammers"><img class="icon" height="48px" width="48px" src="/assets/github.png"></a>
-        <a href="https://discordapp.com/users/1104457977328574618"><img class="icon" height="48px" width="48px" src="/assets/discord.png"></a>
-        <a href="https://www.roblox.com/users/2565977660/profile"><img class="icon" height="48px" width="48px" src="/assets/roblox.png"></a>
-        <h2>About Me</h2>
-        <ul>
+<body class="flex font-inter items-center justify-center min-h-screen bg-background text-white">
+    <div class="bg-container grid max-w-[800px] w-[800px] h-auto px-16 py-12 rounded-[16px]">
+        <p class="text-title font-bold">James</p>
+        <div class="flex items-center gap-2 h-auto mt-1 mb-8">
+            <a href="https://github.com/2jammers"><img class="icon" height="48px" width="48px"
+                    src="/assets/github.png"></a>
+            <a href="https://discordapp.com/users/1104457977328574618"><img class="icon" height="48px" width="48px"
+                    src="/assets/discord.png"></a>
+            <a href="https://www.roblox.com/users/2565977660/profile"><img class="icon" height="48px" width="48px"
+                    src="/assets/roblox.png"></a>
+        </div>
+        <p class="text-heading font-bold">About Me</p>
+        <ul class="list-disc my-2 px-8">
             <li>Full stack developer 🥞</li>
             <li>Open source freedom fighter 🥊</li>
             <li>Calisthenics athlete 💪</li>
@@ -30,19 +32,19 @@
             <li>Cats are pretty cool pets 🐈</li>
             <li>Has knowledge of Luau and web langs 📜</li>
         </ul>
-        <hr>
-        <h2>Positions</h2>
-        <ul>
-            <li>Head of Programming - <a href="https://luminlabsdev.github.io/link/discord">Lumin Labs</a></li>
-            <li>Head of Modeling - <a href="https://luminlabsdev.github.io/link/discord">Lumin Labs</a></li>
+        <hr class="h-[2px] my-6 bg-divider border-0 dark:bg-gray-700">
+        <p class="text-heading font-bold">Positions</p>
+        <ul class="list-disc my-2 px-8">
+            <li>Head of Programming - <a class="underline text-link hover:text-white transition-colors" href="https://luminlabsdev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Head of Modeling - <a class="underline text-link hover:text-white transition-colors" href="https://luminlabsdev.github.io/link/discord">Lumin Labs</a></li>
         </ul>
-        <hr>
-        <h2>Projects</h2>
-        <ul>
-            <li>Framework - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
-            <li>Network - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
-            <li>Debugger - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
-            <li>Storybook - <a href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+        <hr class="h-[2px] my-6 bg-divider border-0 dark:bg-gray-700">
+        <p class="text-heading font-bold">Projects</p>
+        <ul class="list-disc my-2 px-8">
+            <li>Framework - <a class="underline text-link hover:text-white transition-colors" href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Network - <a class="underline text-link hover:text-white transition-colors" href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Debugger - <a class="underline text-link hover:text-white transition-colors" href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
+            <li>Storybook - <a class="underline text-link hover:text-white transition-colors" href="https://lumin-dev.github.io/link/discord">Lumin Labs</a></li>
         </ul>
     </div>
 </body>
